# lab4

./: CMakeLists.txt  Makefile  build.ninja  calculator.cpp  calculator.h  rules.ninja
